--- a/style.css
+++ b/style.css
@@ -1,10 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Lobster+Two:ital@1&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap');
 
+
 .cabecalho{
     background-color: #6496CA;
     position: absolute;
-    width: 1600px;
+    width: 100%;
     height: 65px;
     left: 0px;
     top: 0px;
@@ -53,7 +54,7 @@
     justify-content: center;
     color: #31395E;
     font-family: 'Great Vibes', cursive;
-    font-size: 80px;
+    font-size: 75px;
 }
 
 .sejabem-vindo:before{
@@ -73,7 +74,7 @@
     text-align: center;
     color: #041E42;
     font-family: 'Karma';
-    font-size: 41px;
+    font-size: 38px;
 }
 
 .informacoes{
@@ -82,7 +83,7 @@
     justify-content: center;
     color: #31395E;
     font-family: 'Great Vibes', cursive;
-    font-size: 80px;
+    font-size: 75px;
 }
 .informacoes:before{
     content: "-----";
@@ -105,7 +106,7 @@
     text-align: center;
     color: #041E42;
     font-family: 'Karma';
-    font-size: 41px;
+    font-size: 38px;
 }
 
 
@@ -113,11 +114,35 @@
 
 .foot{
     background-color: #6496CA;
-    width: 1600px;
-    height: 200px;
+    width: 100%;
+    height: 230px;
     left: 0px;
     top: 0px;
     display: flex;
     align-items: center;
     justify-content: space-around;
+}
+
+
+.foot{
+    display: flex;
+    flex-direction: column;
+}
+.ester-lucas{
+    font-family: 'Great Vibes', cursive;
+    font-size: 50px;
+    color: #041E42;
+
+}
+
+.data{
+    font-family: 'Great Vibes', cursive;
+    font-size: 30px;
+    color: #041E42;
+}
+
+.feito-por-nos{
+    font-family: 'Great Vibes', cursive;
+    font-size: 20px;
+    color: #041E42;
 }
