--- a/layouts/style.css
+++ b/layouts/style.css
@@ -3,14 +3,6 @@
 /*CABECALHO*/
 .cabecalho{
     background-color: #6496CA;
-    position: absolute;
-    width: 100%;
-    height: 65px;
-    left: 0px;
-    top: 0px;
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
 }
 .img-cabecalho{
     position: absolute;
@@ -20,22 +12,14 @@
     top: 12px;
     margin-left: 15px;
 }
-.cabecalho-menu{
-    color: #F9E2E7;
-    display: flex;
-    justify-content: end;
-    gap: 30px;
-    font-size: 20px;
-    align-items: center;
-    margin-left: 750px;
-    width: 100%;
+
+.nav-link{
+    color: #F9E2E7 !important;
+    font-size: 20px !important;
 }
-.cabecalho-menu-item{
-    text-decoration: none;
-    color: #F9E2E7;
-}
-.cabecalho-menu-item:hover{
-    color:#041E42;
+
+.nav-link:hover{
+    color: #31395E !important;
 }
 
 /*CARROUSEL*/
