--- a/pages/presentes/presentes.css
+++ b/pages/presentes/presentes.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Lobster+Two:ital@1&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap');
 .cabecalho{
     background-color: #6496CA;
 }
@@ -17,4 +19,37 @@
 
 .nav-link:hover{
     color: #31395E !important;
+}
+
+.lojas ul{
+    list-style: none;
+    padding-left: 0px;
+}
+
+.lojas h3{
+    text-align: center;
+    font-family: 'Great Vibes', cursive;
+    margin-top: 15px;
+    font-size: 80px;
+    color: #31395E;
+}
+
+.lojas li {
+    border-bottom: 1px solid white;
+    padding: 5px;
+    padding-left: 20px;
+    font-size: 30px;
+    background-color: #99bad8;
+    text-align: center;
+    font-family: 'Karma';
+}
+
+.lojas a{
+    color: black;
+    text-decoration: none;
+}
+
+.lojas li:hover{
+    background-color: #31395E;
+    transition: 0.8s;
 }
