--- a/layouts/style.css
+++ b/layouts/style.css
@@ -58,18 +58,18 @@
     flex-direction: column;
 }
 .ester-lucas{
-    font-family: 'Great Vibes', cursive;
+    font-family: 'Karma';
     font-size: 50px;
     color: #041E42;
 
 }
 .data{
-    font-family: 'Great Vibes', cursive;
+    font-family: 'Karma';
     font-size: 30px;
     color: #041E42;
 }
 .feito-por-nos{
-    font-family: 'Great Vibes', cursive;
+    font-family: 'Karma';
     font-size: 20px;
     color: #041E42;
 }
