--- a/pages/presentes/presentes.css
+++ b/pages/presentes/presentes.css
@@ -30,7 +30,7 @@
     text-align: center;
     font-family: 'Great Vibes', cursive;
     margin-top: 15px;
-    font-size: 80px;
+    font-size: 70px;
     color: #31395E;
 }
 
@@ -52,4 +52,48 @@
 .lojas li:hover{
     background-color: #31395E;
     transition: 0.8s;
+}
+
+.row p{
+    color: #31395E;
+    font-family: 'Karma';
+    font-size: 30px;
+}
+
+
+.row img{
+    width: 200px;
+}
+
+
+/*footer*/
+.foot{
+    background-color: #6496CA;
+    width: 100%;
+    height: 230px;
+    left: 0px;
+    top: 0px;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+.foot{
+    display: flex;
+    flex-direction: column;
+}
+.ester-lucas{
+    font-family: 'Great Vibes', cursive;
+    font-size: 50px;
+    color: #041E42;
+
+}
+.data{
+    font-family: 'Great Vibes', cursive;
+    font-size: 30px;
+    color: #041E42;
+}
+.feito-por-nos{
+    font-family: 'Great Vibes', cursive;
+    font-size: 20px;
+    color: #041E42;
 }
