--- a/layouts/style.css
+++ b/layouts/style.css
@@ -74,5 +74,36 @@
     color: #041E42;
 }
 
+/*FOOTER*/
+.foot{
+    background-color: #6496CA;
+    width: 100%;
+    height: 230px;
+    left: 0px;
+    top: 0px;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+.foot{
+    display: flex;
+    flex-direction: column;
+}
+.ester-lucas{
+    font-family: 'Great Vibes', cursive;
+    font-size: 50px;
+    color: #041E42;
+
+}
+.data{
+    font-family: 'Great Vibes', cursive;
+    font-size: 30px;
+    color: #041E42;
+}
+.feito-por-nos{
+    font-family: 'Karma';
+    font-size: 20px;
+    color: #041E42;
+}
 
 
