--- a/pages/contatos/contatos.css
+++ b/pages/contatos/contatos.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Lobster+Two:ital@1&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap');
+
 .cabecalho{
     background-color: #6496CA;
 }
@@ -17,4 +20,37 @@
 
 .nav-link:hover{
     color: #31395E !important;
+}
+
+
+/*FOOTER*/
+.foot{
+    background-color: #6496CA;
+    width: 100%;
+    height: 230px;
+    left: 0px;
+    top: 0px;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+.foot{
+    display: flex;
+    flex-direction: column;
+}
+.ester-lucas{
+    font-family: 'Great Vibes', cursive;
+    font-size: 50px;
+    color: #041E42;
+
+}
+.data{
+    font-family: 'Great Vibes', cursive;
+    font-size: 30px;
+    color: #041E42;
+}
+.feito-por-nos{
+    font-family: 'Karma';
+    font-size: 20px;
+    color: #041E42;
 }
