--- a/pages/fornecedores/fornecedores.css
+++ b/pages/fornecedores/fornecedores.css
@@ -1,7 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Lobster+Two:ital@1&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap');
-
-
+/*CABECALHO*/
 .cabecalho{
     background-color: #6496CA;
 }
@@ -22,7 +21,6 @@
 .nav-link:hover{
     color: #31395E !important;
 }
-
 
 /*FOOTER*/
 .foot{
